After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760446 - search: invalid iter
search: invalid iter
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: search and replace
3.18.x
Other Linux
: Normal critical
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-11 10:13 UTC by Sebastien Bacher
Modified: 2016-01-13 17:59 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2016-01-11 10:13:41 UTC
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/gedit/+bug/1507490

"try to find a word in the opened text file, after I pressed the first letter of the word I want to search, gedit crashed"

similar report on https://bugzilla.redhat.com/show_bug.cgi?id=1253775

backtrace from 3.16.2

"#0  gtk_text_iter_make_real (_iter=_iter@entry=0x7ffcdedc7510) at gtktextiter.c:213
        iter = <optimized out>
        __func__ = "gtk_text_iter_make_real"
  • #1 gtk_text_iter_forward_to_tag_toggle
    at gtktextiter.c line 4189
  • #2 smart_forward_search_async_step
    at gtksourcesearchcontext.c line 1019
  • #3 smart_forward_search_async
    at gtksourcesearchcontext.c line 1110
  • #4 gtk_source_search_context_forward_async
    at gtksourcesearchcontext.c line 3343
  • #5 start_search
    at gedit/gedit-view-frame.c line 393
  • #6 search_entry_changed_cb
    at gedit/gedit-view-frame.c line 1163
  • #7 g_closure_invoke
    at gclosure.c line 768
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3549
  • #9 g_signal_emit_valist
    at gsignal.c line 3305

Comment 1 Sébastien Wilmet 2016-01-12 13:28:13 UTC
Thanks. I can look if the problem is still present on the master branch. Otherwise I can see if I can backport a fix.

Is it on 3.16 or 3.18? In the form, you set the 3.18 version but in the comment you set 3.16.
Comment 2 Sebastien Bacher 2016-01-13 12:15:02 UTC
The Ubuntu error tracker has 3.18.2 reports with the same signature we just don't have a good debug backtrace from that version that's why I posted one from 3.16
Comment 3 Sébastien Wilmet 2016-01-13 17:57:58 UTC
The crash should be fixed:
https://git.gnome.org/browse/gedit/commit/?id=df0868201ebc66119d5130f7ae29e1b0cf47face

I've read again the GtkSourceView code, but it should be bug-free wrt this bug. So the invalid iter must come from gedit. I think the gedit code should be refactored to better understand it, because GeditViewFrame mixes several things, it's hard to follow the code.
Comment 4 Sébastien Wilmet 2016-01-13 17:58:38 UTC
And the commit is backported on the gnome-3-18 branch.
Comment 5 Sebastien Bacher 2016-01-13 17:59:10 UTC
> And the commit is backported on the gnome-3-18 branch.

Thanks!