ViewFrame: make the code more robust in case the start_mark is NULL

https://bugzilla.gnome.org/show_bug.cgi?id=760446